CPP_BSQH_dll_MR_Shin/Make_Dll/BSQH_dll_MR_Shin/BSQH_MR_SHIN_Algorithm.h

extern "C" __declspec (dllexport) void Init_Algorithm_Applied_Vreg1_Compensation(int loop_count, bool Vreg1_Infinite_Loop, int Vreg1_Infinite_Count,
	int& Gamma_R, int& Vreg1, int& Gamma_B, double Measure_X, double Measure_Y, double Measure_Lv, double Target_X, double Target_Y, double Target_Lv
	, double Limit_X, double Limit_Y, double Limit_Lv, double Extension_X, double Extension_Y
	, int Gamma_Register_Limit, int Vreg1_Register_Limit, bool& Gamma_Or_Vreg1_Out_Of_Register_Limit, bool& Within_Spec_Limit);
extern "C" __declspec (dllexport ) void ELVSS_Compensation(bool& ELVSS_Find_Finish,double First_ELVSS,double& ELVSS,double& Vinit,double& First_Slope,double Vinit_Margin,double ELVSS_Margin
	,double Slope_Margin,double First_Measure_X,double First_Measure_Y,double First_Measure_Lv,double Measure_X,double Measure_Y,double Measure_Lv);
extern "C" __declspec (dllexport ) void ELVSS_Compensation_For_DP173(double ELVSS_Min,double ELVSS_Max,bool& ELVSS_Find_Finish,double First_ELVSS,double& ELVSS,double& First_Slope,double ELVSS_Margin
	,double Slope_Margin,double First_Measure_X,double First_Measure_Y,double First_Measure_Lv,double Measure_X,double Measure_Y,double Measure_Lv);
//190528 Add
extern "C" __declspec (dllexport ) void RGB_Gamma_Initial_Values(int Index_Count,int Min_Value,int Max_Value,int* Gamma_R, int* Gamma_G, int* Gamma_B,int& Out_R,int& Out_G,int& Out_B);
//190528 Add
extern "C" __declspec (dllexport ) int Vreg1_Initial_Values(int Index_Count,int* Vreg1);
extern "C" __declspec (dllexport ) double Get_DP173_EA9154_AM0_Resolution(const char* Hex_VREG1_REF1,const char* Hex_VREG1_REF2047);